# python_django_groupby

./: README.md  pyproject.toml
groupby/: manage.py
groupby/groupby/: asgi.py  settings.py  urls.py  wsgi.py
groupby/loganalyze/: apps.py  models.py  urls.py  views.py
groupby/loganalyze/migrations/: 0001_initial.py
groupby/loganalyze/templates/loganalyze/: index.html
